# rin-stock-manager

./: .gitignore  LICENSE.md  README.md  dev.md  pyproject.toml
docs/: README.md  api-reference.md  architecture.md
docs/en/: api-reference.md  architecture.md  development.md  setup.md
docs/ja/: README.md  api-reference.md  architecture.md  development.md  setup.md
notes/: architecture.dio  dev_docs.md  dev_note.md  todo.md  usecase_prflow.md
src/: auth_test.py
src/constants/: filter_op.py  options.py  order_status.py  paths.py  payment_method.py  status.py  timezone.py  transaction_mode.py  types.py
src/models/: analytics.py  base.py  inventory.py  menu.py  order.py  stock.py  sync.py
src/models/domains/: analytics.py  inventory.py  menu.py  order.py  stock.py  sync.py
src/models/dto/: analytics.py  inventory.py  menu.py  order.py  stock.py
src/repositories/abstract/: crud_repo.py
src/repositories/abstruct/: crud_repo.py
src/repositories/bases/: crud_repo.py
src/repositories/concrete/: analysis_repo.py  (+5 more)
src/services/: auth_service.py  client_service.py  file_queue.py  inventory_service.py  order_service.py  reconnect_watcher.py  sales_analysis_service.py
src/utils/: config.py  db_conditions.py  errors.py  filters.py  paths.py  query_utils.py  serializers.py  url_parser.py  utils.py
tests/file_queue/: test_file_queue.py
tests/services/: test_file_queue.py  test_file_queue_basic.py  test_file_queue_edge_cases.py  test_file_queue_gc.py  test_reconnect_watcher_core.py  test_reconnect_watcher_lifecycle.py  test_reconnect_watcher_ping.py
(+17 files in other folders)
